[gd_scene load_steps=5 format=3 uid="uid://k57mhgtv2uhb"]

[ext_resource type="Script" path="res://src/ui/menus/tutorial2.gd" id="1_shm67"]
[ext_resource type="StyleBox" uid="uid://bhfo1noi80203" path="res://assets/panel_opaque.tres" id="2_gut2p"]
[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="2_jb3mw"]
[ext_resource type="Theme" uid="uid://cji2vba6wkk5e" path="res://assets/theme_med.tres" id="3_c7y4m"]

[node name="Tutorial2" type="Node2D"]
script = ExtResource("1_shm67")

[node name="Panel" type="PanelContainer" parent="."]
z_index = 2
offset_right = 512.0
offset_bottom = 261.0
theme_override_styles/panel = ExtResource("2_gut2p")

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="Panel/Margin/VBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("2_jb3mw")
bbcode_enabled = true
text = "This is the tutorial text and when you write enough it just expands downwards to fit all of the text and even the panel accomodates"
fit_content = true

[node name="Label2" type="Label" parent="Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_c7y4m")
theme_override_colors/font_color = Color(0.776471, 0.776471, 0.776471, 1)
text = "(Click anywhere to continue)"
vertical_alignment = 2

[node name="ClickOutButton" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1920, 1080)
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="ClickOutButton" to="." method="_on_click_out_button_pressed"]
